# close-macos-notifications

./: .gitignore  Cargo.toml  README.md  test.sh
.github/workflows/: release.yml
src/: main.rs  platform.rs
